fixed alignment for all but similar movies list

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 
-header {
+header, h1, h2, div {
     text-align: center;
 }
 #search-options {
@@ -8,14 +8,31 @@ header {
     justify-content: center;
     align-items: center;
 }
+button {
+    margin-bottom: 50px;
+    font-size: 20px;
+}
+.hidden {
+    display: none;
+}
 /* ************************ MAIN SCREEN ****************************** */
 
 /* show two search options*/
-
+#one-movie-search, #similar-movies-search {
+    display: none;
+}
+#js-search-results-screen, #js-similar-movie-results {
+    /* display: none; */
+}
 /* ************************ SEARCH ONE MOVIE SCREEN *******************************/
+#js-search-results-screen {
+    /* display: inline-block */
+}
 
 /* ************************ SEARCH SIMILAR MOVIES SCREEN    *******************************/
-
+#js-similar-movie-results {
+    /* display: inline-block */
+}
 
 
 
